@@ -1,7 +1,7 @@
 /****************************************************************************
  * fs/fs_rmdir.c
  *
- *   Copyright (C) 2007-2009 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2007-2009, 2014 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
  *
  * Redistribution and use in source and binary forms, with or without
@@ -111,7 +111,7 @@ int rmdir(FAR const char *pathname)
         }
     }
   else
-    { 
+    {
       ret = ENOSYS;
       goto errout_with_inode;
     }
